--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Shape 2
+Theme Name: Thanks
 Theme URI: http://themeshaper.com/
 Author: ThemeShaper
 Author URI: http://themeshaper.com/
