--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ html {
 	-ms-text-size-adjust: 100%; /* www.456bereastreet.com/archive/201012/controlling_text_size_in_safari_for_ios_without_disabling_user_zoom/ */
 }
 body {
-	background: #fff;
+	background: #f9f9f9;
 }
 article,
 aside,
@@ -59,6 +59,7 @@ hgroup,
 nav,
 section {
 	display: block;
+	background-color: #d6e8f2;
 }
 ol, ul {
 	list-style: none;
@@ -400,21 +401,21 @@ a:active {
 }
 #primary {
 	float: left;
-	margin: 0 -27% 0 0;
+	margin: 1em 1em 1em 1em;
 	padding: 2em;
-	width: 90%;
+	width: 60%;
 }
 #content {
-	margin: 0 27% 0 0;
+	margin: 1em 1em 1em 1em;
 }
 #secondary,
 #tertiary {
-	background: #ede8df;
-   	float: right;
+	background: #f1ece3;
+   	float: left;
    	margin: 1em 1em 0;
     padding: 2em 2em 0;
     position: relative;
-    width: 20%;
+    width: 23%;
 }
 #tertiary {
 	padding-top: 0;
@@ -428,7 +429,7 @@ a:active {
 ----------------------------------------------- */
 
 .site-header hgroup {
-	background: #33605a;
+	background: #d6e8f2;
 	padding: 1.5em 2em;
 }
 .site-title {
@@ -442,7 +443,7 @@ a:active {
 }
 .site-title a,
 .site-description {
-	color: #e9e0d1;
+	color: #000000;
 }
 
 /* =Menu
