--- a/style.css
+++ b/style.css
@@ -431,6 +431,7 @@ a:active {
 5.2 Menus
 --------------------------------------------------------------*/
 .main-navigation {
+	background: none repeat scroll 0 0 #bbbbbb;
 	clear: both;
 	display: block;
 	float: left;
@@ -446,6 +447,7 @@ a:active {
 .main-navigation li {
 	float: left;
 	position: relative;
+	padding: 5px;
 }
 
 .main-navigation a {
@@ -454,10 +456,11 @@ a:active {
 }
 
 .main-navigation ul ul {
+	background: none repeat scroll 0 0 #bbbbbb;
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
 	float: left;
 	position: absolute;
-	top: 1.5em;
+	top: 2.1em;
 	left: -999em;
 	z-index: 99999;
 }
